# libfreertos

./: .gitignore  .gitmodules  meson.build  meson_options.txt
include/: FreeRTOSConfig.h
lib/freertos-10.2.0/include/: FreeRTOS.h
lib/freertos-10.2.0/portable/GCC/ARM_CM0/: port.c
lib/freertos-10.2.0/portable/GCC/ARM_CM7/r0p1/: port.c
lib/freertos-9.0.0/: tasks.c
src/: freertos_atomics_gcc.c  freertos_hooks.c  freertos_init.c  freertos_lock.c  freertos_print.c  heap.c  malloc.c
src/a7/: FreeRTOSConfig.h  freertos_hooks.c
src/asf/: FreeRTOSConfig.h
src/c21/: FreeRTOSConfig.h
src/e70/: FreeRTOSConfig.h  port_same70.c
src/zynq/: FreeRTOSConfig.h  port.c  portZynq7000.c  portmacro.h
subprojects/: freertos.wrap
