option('tick_rate_hz', type: 'integer', value: 100, description: 'Kernel tick rate')
option('cpu_clock_hz', type: 'integer', value: 16000000, description: 'CPU clock speed')
option('arch', type: 'combo', choices: ['default', 'c21', 'e70', 'zynq'], value: 'default', description: 'c21, e70 or zynq')
option('heap_size', type: 'integer', value: 20000, description: 'Heap size for dynamic memory allocation')
option('heap_section', type: 'combo', choices: ['.noinit', '.sdram'], value: '.noinit', description: 'Section for dynamic HEAP')
